# desul

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE  LICENSE_HEADER  NOTICE-LLNL  NOTICE-SNL  README  README.md
.github/workflows/: clang-format-check.yml  continuous-integration-workflow.yml
atomics/: CMakeLists.txt  Config.hpp.cmake.in  desul_atomicsConfig.cmake.in
atomics/include/: DESUL_Atomics.hpp  DESUL_Atomics_Common.hpp  DESUL_Atomics_Compare_Exchange.hpp  DESUL_Atomics_Compare_Exchange_CUDA.hpp  DESUL_Atomics_Compare_Exchange_GCC.hpp  DESUL_Atomics_Compare_Exchange_MSVC.hpp  DESUL_Atomics_Compare_Exchange_Serial.hpp  DESUL_Atomics_GCC.hpp  DESUL_Atomics_Generic.hpp  DESUL_Atomics_Lock_Array.hpp  DESUL_Atomics_Lock_Array_Cuda.hpp  DESUL_Atomics_Macros.hpp
atomics/include/desul/: atomics.hpp
atomics/include/desul/atomics/: Adapt_CXX.hpp  Adapt_HIP.hpp  Adapt_SYCL.hpp  Atomic_Ref.hpp  CUDA.hpp  CUDA_ASM.hpp  CUDA_ASM.inc  CUDA_ASM_undefs.inc  CUDA_CC_7.hpp  Common.hpp  Compare_Exchange.hpp  Compare_Exchange_CUDA.hpp  Compare_Exchange_GCC.hpp  Compare_Exchange_HIP.hpp  Compare_Exchange_MSVC.hpp  Compare_Exchange_OpenACC.hpp  Compare_Exchange_OpenMP.hpp  Compare_Exchange_SYCL.hpp  Compare_Exchange_ScopeCaller.hpp  Compare_Exchange_Serial.hpp  Fetch_Op_CUDA.hpp  Fetch_Op_GCC.hpp  Fetch_Op_Generic.hpp  Fetch_Op_HIP.hpp  Fetch_Op_OpenACC.hpp  Fetch_Op_OpenMP.hpp  Fetch_Op_SYCL.hpp  Fetch_Op_ScopeCaller.hpp  GCC.hpp  Generic.hpp  HIP.hpp  Intrinsics_CUDA.hpp  Lock_Array.hpp  Lock_Array_CUDA.hpp  Lock_Array_Cuda.hpp  Lock_Array_HIP.hpp  Lock_Array_SYCL.hpp  Lock_Based_Fetch_Op.hpp  Lock_Based_Fetch_Op_CUDA.hpp  Lock_Based_Fetch_Op_HIP.hpp  (+14 more)
atomics/include/desul/atomics/cuda/: CUDA_asm.hpp  CUDA_asm_exchange.hpp  cuda_cc7_asm_atomic_fetch_op.inc  cuda_cc7_asm_atomic_op.inc
atomics/performance_tests/: CMakeLists.txt
atomics/performance_tests/kokkos_based/: CMakeLists.txt  PerfTestAtomics.hpp  PerfTestAtomicsLoc.inc  PerfTestAtomicsLoc_Order.inc  PerfTestAtomicsLoc_Scope.inc  PerfTestAtomicsNeigh.inc  PerfTestAtomicsNeigh_Order.inc  PerfTestAtomicsNeigh_Scope.inc  UnitTestMainInit.cpp  complexdouble.cpp  compound.cpp  compound_int32_t_2_loc.cpp  compound_int32_t_2_neigh.cpp  compound_uint64_t_3_loc.cpp  compound_uint64_t_3_neigh.cpp  double.cpp  double_loc.cpp  double_neigh.cpp  float_loc.cpp  float_neigh.cpp  int.cpp  int32_t_loc.cpp  int32_t_neigh.cpp  int64_t.cpp  int64_t_loc.cpp  int64_t_neigh.cpp  uint32_t_loc.cpp  uint32_t_neigh.cpp  uint64_t_loc.cpp  uint64_t_neigh.cpp
atomics/src/: DESUL_Atomics_Lock_Array.cpp  DESUL_Atomics_Lock_Array_CUDA.cpp  Lock_Array.cpp  Lock_Array_CUDA.cpp  Lock_Array_SYCL.cpp
atomics/unit_tests/: CMakeLists.txt
atomics/unit_tests/kokkos_based/: CMakeLists.txt  TestAtomicOperations.hpp  TestAtomicOperations_complexdouble.cpp  TestAtomicOperations_complexfloat.cpp  TestAtomicOperations_double.cpp  TestAtomicOperations_float.cpp  TestAtomicOperations_int.cpp  TestAtomicOperations_longint.cpp  TestAtomicOperations_longlongint.cpp  TestAtomicOperations_unsignedint.cpp  TestAtomicOperations_unsignedlongint.cpp  UnitTestMainInit.cpp  complexdouble.cpp  complexfloat.cpp  double.cpp  float.cpp  int.cpp  longint.cpp  longlongint.cpp  unsignedint.cpp  unsignedlongint.cpp
cmake/: blt_boilerplate.cmake  desulConfig.cmake
src/: CMakeLists.txt
src/desul/: CMakeLists.txt  Macros.h  Macros.hpp  array.hpp  utility.hpp
test/desul/: CMakeLists.txt  Test.hpp  array_test.cpp  test_array.cpp  test_utility.cpp
